Alignment issue of playlist.

--- a/2b-not-2b/src/styles/playbrowser.css
+++ b/2b-not-2b/src/styles/playbrowser.css
@@ -83,7 +83,7 @@ h2 {
 }
 
 .playList {
-  grid-column: 2 / span 4;
+  grid-column: 2 / span 3;
 }
 
 .favorites {
